# otus_cpp_basic_2022_9

./: .gitignore  README.md
Homework/homework_02/: hello_world.cpp
Homework/homework_03/: CMakeLists.txt  guess_number.cpp  readme.txt
Homework/homework_03/03.homework_source-12995-dca15c/: argument.cpp  check_value.cpp  high_scores.cpp
Lessons/lesson_04/test_project/: fib.cpp
Lessons/lesson_04/vebinar/: 0_pow_simple.cpp  3_args.cpp  CMakeLists.txt
diploma_project/: readme.md
diploma_project/research/: CMakeLists.txt  video_capture.cpp
experiments/boost_po/: CMakeLists.txt  main.cpp
homework_02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp  move_me_out.cpp
homework_02/source-12995-f9a14f/: CMakeLists.txt
homework_03/: guess_number.cpp  readme.txt
homeworks/homework_02_lesson_02/: CMakeLists.txt
homeworks/homework_03/: game_flowchart  guess_number.cpp
homeworks/homework_03_lesson_05/: description.txt  readme.txt
homeworks/homework_03_lesson_05/check_table/: example.csv  structures.hpp  table.cpp  table.hpp  test.csv
homeworks/homework_03_lesson_05/game/: CMakeLists.txt  description.txt  game.cpp  game.hpp  table.cpp  table.hpp
homeworks/homework_03_lesson_05/game/inc/: game.hpp  structures.hpp  timer.hpp
homeworks/homework_03_lesson_05/game/include/: game.hpp  table.hpp  timer.hpp
homeworks/homework_03_lesson_05/game/src/: game.cpp  table.cpp  timer.cpp
homeworks/homework_03_lesson_05/lib/: CMakeLists.txt  structures.hpp  table.cpp  table.hpp  test.csv  test_2.csv
homeworks/homework_04_lesson_10/04.homework-345726-b98bb2/include/: astnode.hpp  number.hpp
homeworks/homework_04_lesson_10/calculator/: CMakeLists.txt
homeworks/homework_04_lesson_10/calculator/src/: lexer.cpp  (+4 more)
homeworks/homework_05/: CMakeLists.txt  game.cpp  game_flowchart
homeworks/homework_05/03.homework_source/: CMakeLists.txt  high_scores.txt
homeworks/homework_05/03.homework_source-12995-dca15c/: random_value.cpp
homeworks/homework_05/check_table/: CMakeLists.txt  structures.hpp  table.cpp  table.hpp
homeworks/homework_05/game/: game.cpp
homeworks/homework_05_lesson_12/TASK_SRC/: statistics.cpp
homeworks/homework_05_lesson_12/homework_05_statistics/: CMakeLists.txt
homeworks/homework_05_lesson_12/homework_05_statistics/src/: CMakeLists.txt  main.cpp
homeworks/homework_05_lesson_12/homework_05_statistics/statistics_lib/: CMakeLists.txt
homeworks/homework_05_lesson_12/homework_05_statistics/statistics_lib/include/: i_statistics.hpp  max.hpp  mean.hpp  min.hpp  pct.hpp  pct90.hpp  pct95.hpp  sd.hpp  std.hpp
homeworks/homework_05_lesson_12/homework_05_statistics/statistics_lib/src/: max.cpp  mean.cpp  min.cpp  pct.cpp  pct90.cpp  sd.cpp
homeworks/homework_06_07_lesson_14_17_Containers_and_GTEST/homework_06_containers/: CMakeLists.txt
homeworks/homework_06_07_lesson_14_17_Containers_and_GTEST/homework_06_containers/custom_containers_lib/: CMakeLists.txt
homeworks/homework_06_07_lesson_14_17_Containers_and_GTEST/homework_06_containers/custom_containers_lib/include/: custom_iterator.hpp  custom_list_container.hpp  custom_sequence_container.hpp
homeworks/homework_06_07_lesson_14_17_Containers_and_GTEST/homework_06_containers/custom_containers_lib/test/: CMakeLists.txt  double_linked_list_tests.cpp  sequence_container_tests.cpp  tests_main.cpp
homeworks/homework_06_07_lesson_14_17_Containers_and_GTEST/homework_06_containers/src/: CMakeLists.txt  main.cpp
homeworks/homework_06_lesson_14/homework_06_containers/: CMakeLists.txt
homeworks/homework_06_lesson_14/homework_06_containers/custom_containers_lib/: CMakeLists.txt
homeworks/homework_06_lesson_14/homework_06_containers/custom_containers_lib/include/: custom_container.hpp  custom_iter.hpp  custom_iterator.hpp  custom_list_container.hpp  custom_sequence_container.hpp  double_linked_list_node.hpp  test.hpp
homeworks/homework_06_lesson_14/homework_06_containers/custom_containers_lib/src/: test.cpp
homeworks/homework_06_lesson_14/homework_06_containers/src/: CMakeLists.txt  main.cpp
lesson_04/test_project/: CMakeLists.txt
lesson_04/vebinar/: 0_pow_simple.cpp  11_fib.cpp  1_pow.cpp  4_gcd.cpp  5_swap_naive.cpp  7_minigrep.cpp  8_module.cpp  9_hello.cpp  capitalize.cpp  sqreq.cpp
lessons/lesson_02/: hello_world.cpp
lessons/lesson_03/: 01_cin_cout.cpp  01_cin_cout_namespace.cpp  01_cin_cout_using.cpp  02_type_ranges_int.cpp  03_type_ranges_float.cpp  04_arithm_operations.cpp  05_bool_logic.cpp  06_if.cpp  07_switch.cpp  08_while_do_loop.cpp  09_for_loop.cpp  10_file_io.cpp  CMakeLists.txt  xx_cast_int_float.cpp
lessons/lesson_04/test_project/: fib
lessons/lesson_04/vebinar/: 10_hanoi.cpp  2_gcd_cin.cpp  invx.cpp
lessons/lesson_05/: CMakeLists.txt  compilation.cpp  compilation.h  dynamic_library_usage.cpp  file_io.cpp  function_overloading.cpp  static_library_usage.cpp  translation_unit1.cpp  translation_unit1.h  translation_unit2.cpp  translation_unit2.h  translation_unit_main.cpp
lessons/lesson_05/dynamic_library/: CMakeLists.txt  calculation.cpp  calculation.h
lessons/lesson_05/static_library/: CMakeLists.txt  datetime.cpp  datetime.h
lessons/lesson_06/: CMakeLists.txt
lessons/lesson_06/example1/: CMakeLists.txt  main.cpp
lessons/lesson_06/example2/: CMakeLists.txt  version.cpp
lessons/lesson_06/example3/: CMakeLists.txt
lessons/lesson_06/example4/: CMakeLists.txt
lessons/lesson_06/example5/: CMakeLists.txt
lessons/lesson_06/example6/: CMakeLists.txt
lessons/lesson_06/example7/: CMakeLists.txt
lessons/lesson_06/example8/: CMakeLists.txt
lessons/lesson_12/: 1.accessibility_of_inherited_members.cpp  2.inheritance.square-rect.cpp  3.inheritance.try-poly.cpp  4.virtual.cpp  CMakeLists.txt  Color.hpp
lessons/lesson_12/5.shapes/: Circle.cpp  ConsoleRenderer.cpp  ConsoleRenderer.hpp  LineSegment.cpp  Pi.hpp  Point.hpp  Rect.cpp  Renderer.hpp  Shape.cpp  Shapes.hpp  main.cpp
lessons/lesson_14/ctor_dctor_move/: complex_value.cpp  complex_value_copy.cpp  convertion.cpp  destructors.cpp  explicit.cpp  move.cpp  virtual_destructor.cpp
(+15 files in other folders)
