cmake_minimum_required(VERSION 3.8)

project(functions CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

add_executable(0_pow_simple 0_pow_simple.cpp)
add_executable(1_pow 1_pow.cpp)
add_executable(2_gcd_cin 2_gcd_cin.cpp)
add_executable(3_args 3_args.cpp)
add_executable(4_gcd 4_gcd.cpp)
add_executable(5_swap_naive 5_swap_naive.cpp)
add_executable(6_swap 6_swap.cpp)
add_executable(7_minigrep 7_minigrep.cpp)
add_executable(8_module 8_module.cpp)
add_executable(9_hello 9_hello.cpp)
add_executable(10_hanoi 10_hanoi.cpp)
add_executable(11_fib 11_fib.cpp)
add_executable(capitalize capitalize.cpp)
